# jobmanager

./: flake.nix  pyproject.toml  setup.py
jobmanager/: jobmanager.py
